Company info task completed.

--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -88,7 +88,7 @@
                 </li>
                 <li>
                   <span>About Company</span>
-                  <small>{{info.company_desc ? info.company_desc : 'N/A' }}</small>
+                  <small class="company-info-m">{{shortDescription(info.company_desc) ? shortDescription(info.company_desc)  :'N/A' }}</small>
                 </li>
               </ul>
             </div>
