--- a/client/src/app/components/main-toolbar/main-toolbar.component.html
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.html
@@ -80,7 +80,8 @@
       </ng-container>
 
       <a routerLink="read-more" class="logo-href">
-        <img src="assets/icons/ic_cf_logo.svg">
+        <img src="assets/icons/ic_cf_logo_white.png"> 
+        <span>yourCareerFair</span>
       </a>
 
       <!-- Shows Only in Desktop Mode -->
