CAR-000 Modified string.

--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -416,7 +416,7 @@
         <h3 class="profile-form__title">
           SKILLS & INTERESTS
         </h3>
-        <p class="headup">Note that you can easily add skills as well as interests to your profile later by clicking on entries listed on position pages, search results, or other user profiles.</p>
+        <p class="headup">Note that you can easily add skills and interests to your profile later by clicking on entries listed on position pages, search results, or other user profiles.</p>
         <div class="profile-form__field search">
           <h3>Skills <span *ngIf="userSkillsList.length > 0" class="count">{{userSkillsList.length}}</span></h3><img src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()">
           <mat-form-field appearance="standard" class="search">
