--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -85,12 +85,12 @@
               <simple-tag *ngIf="score.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
                 value="{{mathFloor(6*score.true_fitscore_info?.required_skills_fitscore)}}"
                 matTooltip="Required Skills Match: {{(score.true_fitscore_info?.required_skills_fitscore*100) | number : '2.0' }}%"
-              [matTooltipShowDelay]=500>
+                [matTooltipShowDelay]=500>
               </simple-tag>
               <simple-tag *ngIf="score.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
                 ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.experience_fitscore)}}"
                 matTooltip="Experience Match: {{(score.true_fitscore_info?.experience_fitscore*100)| number : '2.0'}}%"
-              [matTooltipShowDelay]=500>
+                [matTooltipShowDelay]=500>
               </simple-tag>
               <simple-tag *ngIf="score.true_fitscore_info?.education_weight" type="gray" title="Education Match"
                 ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.education_fitscore)}}"
@@ -100,7 +100,7 @@
               <simple-tag *ngIf="score.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
                 ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.interests_fitscore)}}"
                 matTooltip="Interests Match: {{(score.true_fitscore_info?.interests_fitscore*100)| number : '2.0'}}%"
-              [matTooltipShowDelay]=500>
+                [matTooltipShowDelay]=500>
               </simple-tag>
               <p
                 *ngIf="!score.true_fitscore_info ||  (score.true_fitscore_info && !score.true_fitscore_info.skills_weight && !score.true_fitscore_info.experience_weight && !score.true_fitscore_info.education_weight && !score.true_fitscore_info.interests_weight && !score.minimum_skills)">
@@ -112,12 +112,14 @@
       </div>
       <div id="matched-skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
         <div class="row position-required-skills-detail main-card">
+
           <div class="show-button">
             <action-button type="text" title="{{!showMoreFlag ? 'See All' :
-                    'See Less'}}" color="primary" (click)="showMoreFlag = !showMoreFlag"
+                      'See Less'}}" color="primary" (click)="showMoreFlag = !showMoreFlag"
               *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
           </div>
           <h3>Matched Skills</h3>
+
           <ul>
             <li>
               <h5 for="skill_required">Matched Preferred Skills<span
@@ -276,14 +278,14 @@
           *ngIf="userSkillsList?.length > 0">
 
           <div class="qualification-heading">
-              <h3> Skills </h3>
-              <img src="assets/icons/ic_question.svg" class="question" (click)="openSkillDescriptionDialog()">
+            <h3> Skills </h3>
+            <img src="assets/icons/ic_question.svg" class="question" (click)="openSkillDescriptionDialog()">
 
-            </div>
+          </div>
 
 
           <div class="education-level-m">
-              <!-- <div" class="form-field search"
+            <!-- <div" class="form-field search"
                   [formGroup]="skillsSearchForm">
                   <mat-form-field appearance="standard" class="search">
                     <mat-icon matSuffix>search</mat-icon>
@@ -298,28 +300,30 @@
                     </mat-autocomplete>
                   </mat-form-field>
                 </div> -->
-              <form class="form-field search" [formGroup]="skillsSearchForm" autocomplete="off">
-                  <mat-form-field appearance="standard" class="search">
-                    <mat-icon matSuffix>search</mat-icon>
-                    <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
-                      formControlName="skills" >
-                    <mat-autocomplete #autocompleteSkills="matAutocomplete">
-                      <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill?.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
-                        <span>{{autocomplete_skill.skill}}</span>
-                      </mat-option>
-                    </mat-autocomplete>
-                  </mat-form-field>
-                </form>
-                <div *ngIf="temp_skill" class="temp-skill">
-                    <simple-tag type="gray" title="{{temp_skill.skill}}" ellipseTag="true"  value="{{temp_skill.skill_level}}" >
-                    </simple-tag>
-                    <mat-icon (click)="editSkillDone()">cancel</mat-icon>
-                  </div>
+            <form class="form-field search" [formGroup]="skillsSearchForm" autocomplete="off">
+              <mat-form-field appearance="standard" class="search">
+                <mat-icon matSuffix>search</mat-icon>
+                <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
+                  formControlName="skills">
+                <mat-autocomplete #autocompleteSkills="matAutocomplete">
+                  <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill?.skill"
+                    (onSelectionChange)="addSkills(autocomplete_skill)">
+                    <span>{{autocomplete_skill.skill}}</span>
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </form>
+            <div *ngIf="temp_skill" class="temp-skill">
+              <simple-tag type="gray" title="{{temp_skill.skill}}" ellipseTag="true" value="{{temp_skill.skill_level}}">
+              </simple-tag>
+              <mat-icon (click)="editSkillDone()">cancel</mat-icon>
+            </div>
             <h5>Skills <span>{{ userSkillsList ? userSkillsList.length : '0' }}</span></h5>
             <div class="skills" *ngIf="displayItemsLimit; let limit">
               <ng-container *ngFor="let skill of userSkillsList; let i = index">
                 <simple-tag type="gray" *ngIf="( i < limit)" title="{{skill.skill}}" ellipseTag="true"
-                  value="{{skill.skill_level}}" [matTooltip]="SkillLevelDescription[skill.skill_level].title + SkillLevelDescription[skill.skill_level].description"
+                  value="{{skill.skill_level}}"
+                  [matTooltip]="SkillLevelDescription[skill.skill_level].title + SkillLevelDescription[skill.skill_level].description"
                   [matTooltipShowDelay]=500></simple-tag>
               </ng-container>
               <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit"
